# ppt-image-replacer

./: .gitignore  README.md  __init__.py  build.bat  create_new_images.py  installer.iss  ppt_image_replacer.py  push_to_github.bat  push_with_token.bat  pyproject.toml  run_ppt_tool.bat  setup.py  setup_and_push.bat  simple_test.py  test_ppt.py  test_replace.py  verify_replace.py  使用说明.md  发布指南.md  推送说明.md  项目总结.md  项目结构.md
.claude/: settings.local.json
.github/workflows/: publish.yml  test.yml
release/: README.md
